--- a/AddressBook.css
+++ b/AddressBook.css
@@ -19,8 +19,13 @@ header {
 
 h1 {
     white-space: nowrap;
-    font-weight: lighter;
     text-align: center;
+}
+
+#searchbar {
+    width: inherit;
+    margin-right: 5px;
+    border: 0;
 }
 
 main {
@@ -38,8 +43,40 @@ main {
 }
 
 
-#add-button {
+#show-contact-form {
     width: 350px;
+    border: 0;
+    background-color: white;
+}
+
+#add-contact {
+    display: none;
+
+}
+
+label {
+    font-size: 80%;
+}
+
+input,
+textarea {
+    border: #5D868D 2px solid;
+    width: inherit;
+}
+
+input:focus,
+textarea:focus {
+    outline: #5D868D;
+}
+
+::placeholder {
+    color: #5D868D;
+}
+
+#add-button,
+#add-button input {
+    width: 350px;
+    margin: auto;
 }
 
 #add-input {
@@ -47,14 +84,11 @@ main {
 }
 
 
-
-.contact p {
-    color: blueviolet;
-}
-
 #delete {
     position: relative;
     left: 300px;
+    margin: 0;
+    padding: 0;
 }
 
 /*
