--- a/AddressBook.css
+++ b/AddressBook.css
@@ -61,7 +61,8 @@ label {
 input,
 textarea {
     border: #5D868D 2px solid;
-    width: inherit;
+    width: 345px;
+    margin-bottom: 2%;
 }
 
 input:focus,
@@ -75,20 +76,34 @@ textarea:focus {
 
 #add-button,
 #add-button input {
-    width: 350px;
     margin: auto;
+    background-color: white;
+    color: #5D868D;
+    font-weight: bold;
+}
+
+#add-button {
+    width: 55px;
+    position: relative;
+    left: 293px;
+    border: #5D868D 2px solid;
 }
 
 #add-input {
+    width: 45px;
     border: 0;
+    margin: 0;
+    padding: 0;
 }
-
 
 #delete {
     position: relative;
     left: 300px;
     margin: 0;
     padding: 0;
+    background-color: white;
+    border: #5D868D 2px solid;
+    color: #5D868D;
 }
 
 /*
