--- a/AddressBook.css
+++ b/AddressBook.css
@@ -26,7 +26,7 @@ header {
     width: fit-content;
     align-self: center;
     align-content: center;
-    font-size: 100%;
+    font-size: 120%;
     margin: 2% auto;
 }
 
@@ -35,10 +35,15 @@ h1 {
     text-align: center;
 }
 
+#title {
+    padding-top: 5%;
+    padding-bottom: 5%;
+}
 
 #searchbar {
     width: inherit;
     margin-right: 5px;
+    margin-left: 5px;
     border: 0;
 }
 
@@ -166,4 +171,8 @@ a {
     position: absolute;
     right: 5px;
     bottom: 0;
+    background-color: #5D868D;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 10px;
 }
