--- a/AddressBook.css
+++ b/AddressBook.css
@@ -155,6 +155,10 @@ textarea:focus {
     margin: 2%;
 }
 
+#id {
+    display: none;
+}
+
 #name-surname {
     width: 95%;
     background-color: white;
