GitHub link added

--- a/AddressBook.css
+++ b/AddressBook.css
@@ -1,7 +1,8 @@
+/* git@github.com:wmaterkowska/AddressBook-web.git */
+
 * {
     margin: 0;
     padding: 0;
-    /* border: black 1px solid; */
 }
 
 
